LAST FINAL COMMIT

--- a/index.Rmd
+++ b/index.Rmd
@@ -56,7 +56,7 @@ The survey is conducted as a one-hour long face-to-face interview of each respon
 
   The European Social Survey measures a number of social well-being indexes throughout Europe in a prolonged period of time. 
   
-   Because the data is more recent, I will treat the UK data as a long-term effect estimator of how steady the population's left-to-right index has been based on age, **assuming this ideology was more to the right when the last conservative shift happened in 2010** (no party other than the Conservatives have won the election since 2010 <a href="#footnote-3">(3)</a>. That is, is the scale as people get older still steered more to the right as it was thirteen years ago? As per Italy, since the data is more recent, I will treat it as a short-term indicator of the effect age has on people's political index.
+   Because the data is more recent, I will treat the UK data as a long-term effect estimator of how steady the population's left-to-right index has been based on age, **assuming this ideology was more to the right when the last conservative shift happened in 2010** -- no party other than the Conservatives have won the election since 2010 <a href="#footnote-3">(3)</a>. That is, is the scale as people get older still steered more to the right as it was thirteen years ago? As per Italy, since the data is more recent, I will treat it as a short-term indicator of the effect age has on people's political index.
       
   To analyze the data I have, I will assume that the respondents under 18 years old were able to form politically valuable opinions that firmly positioned them on the left-to-right index although not yet being able to vote.
 
@@ -359,13 +359,13 @@ ggplot(data_uk_multiple, aes(x = hhmmb, y = agea)) +
 <ul>
 <li>**Intercept (68.299)**: This shows that the average age in the UK of respondents that are very liberal, didn't finish primary education, and do not have children in their household is approximately 68 years old.</li>
 <li>**Left-to-Right Political Index (1.637)**: The coefficient for `lrscale` is 1.637, and its p-value is $p<0.001$, which indicates a statistically significant positive correlation at a statistical significance level of $\alpha = 0.05, \alpha = 0.01, \alpha = 0.1$. This implies that there is strong evidence of an association between political ideology and age, accounting for education level and number of children in the household, in the UK.</li>
-<li>**Education Level (-0.015)**: The coefficient for `edulvlb` is -0.015 with a p-value of $<0.001$, indicating a statistically significant and rather weak, negative association with age at a statistical significance level of $\alpha = 0.05, \alpha = 0.05, \alpha = 0.01, \alpha = 0.1$. This suggests that for each additional unit increase in the education level (the higher their education is), the respondent’s age is expected to decrease by 0.015 years, holding other variables constant (thus, younger people are more educated, on average, in the UK).</li>
+<li>**Education Level (-0.015)**: The coefficient for `edulvlb` is -0.015 with a p-value of $<0.001$, indicating a statistically significant and rather weak, negative association with age at a statistical significance level of $\alpha = 0.05, \alpha = 0.01, \alpha = 0.1$. This suggests that for each additional unit increase in the education level (the higher their education is), the respondent’s age is expected to decrease by 0.015 years, holding other variables constant (thus, younger people are more educated, on average, in the UK).</li>
 <li>**Number of Children in Household (−7.221)**: The coefficient for `hhmmb` is $-7.221$ with a p-value of $<0.001$, suggesting a statistically significant negative relationship with age. This means that for each additional child in the household, the respondent’s age is expected to decrease by approximately 7.221 years, holding other factors constant (thus, younger people have more children in the UK).</li>
 </ul>
 
 <h2 id="eight">Conclusions</h2>
 
-This project aimed to analyze the relationship between age and political ideology in Europe, focusing on two countries that have recently undergone relevant, drastic changes in their political systems, Italy and the United Kingdom. The analysis of the data showed that, while there is a positive correlation between age and the political ideology index in the latest version of the European Social Survey (ESS), it is not causal due to the presence of multiple confounders, among which there are the respondents' education level and number of children in their household. Thus, my hypothesis is not proved fully. 
+This project aimed to analyze the relationship between age and political ideology in Europe, focusing on two countries that have recently undergone relevant, drastic changes in their political systems, Italy and the United Kingdom. The analysis of the data showed that, while there is a positive correlation between age and the political ideology index in the latest version of the European Social Survey (ESS), it is not definitively causal due to the presence of multiple confounders, among which there are the respondents' education level and number of children in their household. Thus, my hypothesis is not proved fully. 
 
 More analysis is needed, perhaps focusing on all possible confounders. However, this can prove burdensome as political ideology is extremely difficult to comprehensively analyze causally, if not impossible. If provided with the needed resources, I could expand my project as to include (1) more editions of the ESS, and (2) include as many confounders as possible in my research.
 
